<resources>
    <string name="app_name">database</string>
    <string name="enter_your_mail_address">Enter Your Mail Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="button">Button</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_unique_id">Enter Unique Id</string>
    <string name="welcome">Welcome</string>
    <string name="if_your_are_registered_then_sign_in">If your are Registered then Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="mail">mail</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="unique_id">Unique Id</string>
    <string name="signIn2">Sign In</string>
</resources>